Bug 512235 bug 462809 should be implemented in content/events, not widget/src/* r=roc+vlad