content/events/src/nsEventStateManager.cpp
@@ -373,23 +373,40 @@ public:
   static void OnEvent(nsEvent* aEvent);
   static void Shutdown();
   static PRUint32 GetTimeoutTime();
+  static void AccelerateWheelDelta(PRInt32 &aScrollX, PRInt32 &aScrollY);
+
+  enum {
+    kScrollSeriesTimeout = 80
+  };
 protected:
   static nsIntPoint GetScreenPoint(nsGUIEvent* aEvent);
   static void OnFailToScrollTarget();
   static void OnTimeout(nsITimer *aTimer, void *aClosure);
   static void SetTimeout();
   static PRUint32 GetIgnoreMoveDelayTime();
+  static PRInt32 GetAccelerationStart();
+  static PRInt32 GetAccelerationFactor();
+  static PRInt32 ComputeWheelDelta(PRInt32 aDelta, PRInt32 aFactor);
 
   static nsWeakFrame sTargetFrame;
   static PRUint32    sTime;        // in milliseconds
   static PRUint32    sMouseMoved;  // in milliseconds
   static nsITimer*   sTimer;
+  static PRInt32     sScrollSeriesCounter;
 };
 
 nsWeakFrame nsMouseWheelTransaction::sTargetFrame(nsnull);
 PRUint32    nsMouseWheelTransaction::sTime        = 0;
 PRUint32    nsMouseWheelTransaction::sMouseMoved  = 0;
 nsITimer*   nsMouseWheelTransaction::sTimer       = nsnull;
+PRInt32     nsMouseWheelTransaction::sScrollSeriesCounter = 0;
+
+static PRBool
+OutOfTime(PRUint32 aBaseTime, PRUint32 aThreshold)
+{
+  PRUint32 now = PR_IntervalToMilliseconds(PR_IntervalNow());
+  return (now - aBaseTime > aThreshold);
+}
 
 static PRBool
 CanScrollOn(nsIScrollableView* aScrollView, PRInt32 aNumLines,
@@ -410,6 +427,7 @@ nsMouseWheelTransaction::BeginTransaction(nsIFrame* aTargetFrame,
 {
   NS_ASSERTION(!sTargetFrame, "previous transaction is not finished!");
   sTargetFrame = aTargetFrame;
+  sScrollSeriesCounter = 0;
   if (!UpdateTransaction(aNumLines, aScrollHorizontal)) {
     NS_ERROR("BeginTransaction is called even cannot scroll the frame");
     EndTransaction();
@@ -433,6 +451,11 @@ nsMouseWheelTransaction::UpdateTransaction(PRInt32 aNumLines,
   }
 
   SetTimeout();
+
+  if (sScrollSeriesCounter != 0 && OutOfTime(sTime, kScrollSeriesTimeout))
+    sScrollSeriesCounter = 0;
+  sScrollSeriesCounter++;
+
   // We should use current time instead of nsEvent.time.
   // 1. Some events doesn't have the correct creation time.
   // 2. If the computer runs slowly by other processes eating the CPU resource,
@@ -448,13 +471,7 @@ nsMouseWheelTransaction::EndTransaction()
   if (sTimer)
     sTimer->Cancel();
   sTargetFrame = nsnull;
-}
-
-static PRBool
-OutOfTime(PRUint32 aBaseTime, PRUint32 aThreshold)
-{
-  PRUint32 now = PR_IntervalToMilliseconds(PR_IntervalNow());
-  return (now - aBaseTime > aThreshold);
+  sScrollSeriesCounter = 0;
 }
 
 void
@@ -602,6 +619,43 @@ nsMouseWheelTransaction::GetIgnoreMoveDelayTime()
 {
   return (PRUint32)
     nsContentUtils::GetIntPref("mousewheel.transaction.ignoremovedelay", 100);
+}
+
+void
+nsMouseWheelTransaction::AccelerateWheelDelta(PRInt32 &aScrollX,
+                                              PRInt32 &aScrollY)
+{
+  PRInt32 start = GetAccelerationStart();
+  if (start < 0 || sScrollSeriesCounter < start)
+    return;
+
+  PRInt32 factor = GetAccelerationFactor();
+  if (factor < 0)
+    return;
+
+  aScrollX = ComputeWheelDelta(aScrollX, factor);
+  aScrollY = ComputeWheelDelta(aScrollY, factor);
+}
+
+PRInt32
+nsMouseWheelTransaction::ComputeWheelDelta(PRInt32 aDelta, PRInt32 aFactor)
+{
+  if (aDelta == 0)
+    return 0;
+
+  return PRInt32(0.5 + (aDelta * sScrollSeriesCounter * (double)aFactor / 10));
+}
+
+PRInt32
+nsMouseWheelTransaction::GetAccelerationStart()
+{
+  return nsContentUtils::GetIntPref("mousewheel.acceleration.start", -1);
+}
+
+PRInt32
+nsMouseWheelTransaction::GetAccelerationFactor()
+{
+  return nsContentUtils::GetIntPref("mousewheel.acceleration.factor", -1);
 }
 
 /******************************************************************/
@@ -2466,6 +2520,7 @@ nsEventStateManager::DoScrollText(nsPresContext* aPresContext,
         (noDefer ? NS_VMREFRESH_IMMEDIATE : NS_VMREFRESH_DEFERRED));
     }
     else {
+      nsMouseWheelTransaction::AccelerateWheelDelta(scrollX, scrollY);
       scrollView->ScrollByLinesWithOverflow(scrollX, scrollY, overflowX, overflowY,
         (noDefer ? NS_VMREFRESH_IMMEDIATE : NS_VMREFRESH_SMOOTHSCROLL));
     }
