widget/src/windows/nsWindow.h
@@ -322,11 +322,6 @@ protected:
   PRBool                  OnMouseWheel(UINT msg, WPARAM wParam, LPARAM lParam, 
                                        PRBool& result, PRBool& getWheelInfo,
                                        LRESULT *aRetValue);
-  static void             OnMouseWheelTimeout(nsITimer* aTimer, void* aClosure);
-  void                    UpdateMouseWheelSeriesCounter();
-  int                     ComputeMouseWheelDelta(int currentVDelta,
-                                                 int iDeltaPerLine,
-                                                 ULONG ulScrollLines);
 #if !defined(WINCE)
   void                    OnWindowPosChanging(LPWINDOWPOS& info);
 #endif // !defined(WINCE)
@@ -417,7 +412,6 @@ protected:
   nsNativeDragTarget*   mNativeDragTarget;
   HKL                   mLastKeyboardLayout;
   nsPopupType           mPopupType;
-  int                   mScrollSeriesCounter;
   PRPackedBool          mDisplayPanFeedback;
   WindowHook            mWindowHook;
 #ifdef WINCE_WINDOWS_MOBILE
